# INFORMER

./: .bandit  .gitignore  .pre-commit-config.yaml  ARCHIVO_COMPLETO_CONTENIDOS.txt  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  OPTIMIZATION_REPORT.md  README.md  README_DESCARGA.md  SECURITY.md  informer.py  pyproject.toml  readme.md  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: conf.py  index.rst
nbs/: models.informer.ipynb
neuralforecast/: __init__.py
neuralforecast/common/: _base_model.py  _modules.py
neuralforecast/losses/: pytorch.py
requirements/: base.txt  dev.txt
src/informer/: __init__.py
src/informer/losses/: __init__.py
src/informer/models/: __init__.py  informer.py
src/informer/models/components/: __init__.py  attention.py  layers.py
src/informer/utils/: __init__.py
tests/: conftest.py  test_informer.py
tests/integration/: test_end_to_end.py
tests/unit/: test_attention.py
